--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Hi 20:21 28-11</h1>
     <h1>Comm1 20:23</h1>
     <h1>Comm2 20:29</h1>
+    <h2>Изменения на удаленном репозитории, 20:32</h2>
 </body>
 </html>
